# sim-device-control

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.devices.yml  docker-compose.yml  mosquitto.conf  requirements.txt
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run-docker.sh
backend/src/sim_device_control/: __init__.py  __main__.py  app.py  config.py  db.py  schemas.py
backend/src/sim_device_control/drivers/: db.py  dc_motor.py  device_manager.py  humidity.py  mqtt.py  pressure.py  stepper_motor.py  temperature.py
backend/src/sim_device_control/drivers/base/: base_controller.py  base_sensor.py
backend/tests/: conftest.py  test_app.py  test_db.py
frontend/: .env.example  Dockerfile  README.md  run-docker.sh  vite.config.ts
frontend/src/: App.css  App.tsx  panel-config.tsx
frontend/src/components/: device-action.tsx  device-controller.tsx  device-dependancies.tsx  device-details.tsx  device-list.tsx  device-read-action.tsx  device-selector.tsx  device-write-action.tsx  humidity-sensor.tsx  pressure-sensor.tsx  react.tsx  temperature-sensor.tsx  vite.tsx
frontend/src/panels/: dc-motor.tsx  device-list.tsx  humidity-sensor.tsx  log-viewer.tsx  pressure-sensor.tsx  stepper-motor.tsx  temperature-sensor.tsx
frontend/src/utils/: device-dependancies.tsx
sim-device/: .env.example  Cargo.toml  Dockerfile  README.md  device_info.json  run-docker.sh
sim-device/src/: main.rs
sim-device/src/drivers/: dc_motor.rs  device.rs  humidity_sensor.rs  (+5 more)
src/sim_device_control/: __main__.py
